--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -9,6 +9,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
+  /* ::-webkit-scrollbar: disabled */
   --font-Lato: "Lato", san-serif;
 }
 
@@ -143,17 +144,13 @@
   }
 }
 
-/* global.css or tailwind.css */
-.swiper-pagination-bullet {
-  background: #C9C9C9;
-  opacity: 1;
-}
-.swiper-pagination-bullet-active {
-  background: #4E342E;
+html, body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
+html::-webkit-scrollbar,
 body::-webkit-scrollbar {
   display: none;
-  /* stroke-width: 10; */
+  width: 0px;
 }
-
