--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -5,7 +5,6 @@
 @import "swiper/css/pagination";
 @import "swiper/css/navigation";
 
-
 @custom-variant dark (&:is(.dark *));
 
 @theme {
@@ -154,3 +153,22 @@ body::-webkit-scrollbar {
   display: none;
   width: 0px;
 }
+
+
+/* in globals.css or SwipableCards.css */
+.custom-pagination .swiper-pagination-bullet {
+  background: #ccc;
+  opacity: 0.6;
+  width: 8px;
+  height: 8px;
+  border-radius: 9999px;
+  margin: 0 4px !important;
+}
+
+.custom-pagination .swiper-pagination-bullet-active {
+  background: #7d726a; /* dark brown like screenshot */
+  opacity: 1;
+  width: 10px;
+  height: 10px;
+}
+
